objects/Sales_Strategy__c.object
<CustomObject>
    <fields>
        <fullName>Design_Principles__c</fullName>
        <label>Design Principles</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pursuit_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pursuit Template</label>
        <referenceTo>Pursuit_Template__c</referenceTo>
        <relationshipLabel>Sales Strategies</relationshipLabel>
        <relationshipName>Sales_Strategies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Strategy_Description__c</fullName>
        <label>Strategy Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Strategy_Type__c</fullName>
        <label>Strategy Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales Strategy</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Sales Strategy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Strategies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>